force-app/main/default/objects/Contract_Payment__c/Contract_Payment__c.object-meta.xml
<CustomObject><deploymentStatus>Deployed</deploymentStatus><description>Contract payment schedule, invoice and cash-receipt evidence tied to project delivery.</description><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><externalSharingModel>ControlledByParent</externalSharingModel><label>Contract Payment</label><nameField><displayFormat>PAY-{00000}</displayFormat><label>Payment Number</label><type>AutoNumber</type></nameField><pluralLabel>Contract Payments</pluralLabel><sharingModel>ControlledByParent</sharingModel><visibility>Public</visibility></CustomObject>