force-app/main/default/objects/Contract_Payment__c/fields/Acceptance_Required__c.field-meta.xml
<CustomField><fullName>Acceptance_Required__c</fullName><defaultValue>true</defaultValue><label>Acceptance Required</label><type>Checkbox</type></CustomField>