force-app/main/default/objects/Contract_Payment__c/fields/Billing_Realization_Percent__c.field-meta.xml
<CustomField><fullName>Billing_Realization_Percent__c</fullName><description>Recognized or collected value divided by planned billable value.</description><label>Billing Realization Percent</label><precision>7</precision><scale>2</scale><trackHistory>false</trackHistory><type>Percent</type></CustomField>