force-app/main/default/objects/Contract_Payment__c/fields/Collection_Effectiveness_Percent__c.field-meta.xml
<CustomField><fullName>Collection_Effectiveness_Percent__c</fullName><description>Paid amount divided by due and collectible invoiced value.</description><label>Collection Effectiveness Percent</label><precision>7</precision><scale>2</scale><trackHistory>false</trackHistory><type>Percent</type></CustomField>