force-app/main/default/objects/Contract_Payment__c/fields/Commercial_Line__c.field-meta.xml
<CustomField><fullName>Commercial_Line__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Contract Line</label><referenceTo>Commercial_Line__c</referenceTo><relationshipLabel>Payments</relationshipLabel><relationshipName>Payments</relationshipName><type>Lookup</type></CustomField>