force-app/main/default/objects/Contract_Payment__c/fields/Commercial_Reference__c.field-meta.xml
<CustomField><fullName>Commercial_Reference__c</fullName><label>Contract</label><referenceTo>Commercial_Reference__c</referenceTo><relationshipLabel>Payments</relationshipLabel><relationshipName>Payments</relationshipName><relationshipOrder>0</relationshipOrder><reparentableMasterDetail>true</reparentableMasterDetail><type>MasterDetail</type><writeRequiresMasterRead>false</writeRequiresMasterRead></CustomField>