force-app/main/default/objects/Contract_Payment__c/fields/Days_Overdue__c.field-meta.xml
<CustomField><fullName>Days_Overdue__c</fullName><formula>IF(AND(Outstanding_Amount__c &gt; 0, TODAY() &gt; Due_Date__c), TODAY() - Due_Date__c, 0)</formula><formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs><label>Days Overdue</label><precision>8</precision><scale>0</scale><type>Number</type></CustomField>