force-app/main/default/objects/Contract_Payment__c/fields/DSO_Days__c.field-meta.xml
<CustomField><fullName>DSO_Days__c</fullName><description>Days sales outstanding for this payment obligation.</description><label>DSO Days</label><precision>6</precision><scale>0</scale><trackHistory>false</trackHistory><type>Number</type></CustomField>