force-app/main/default/objects/Contract_Payment__c/fields/Due_Date__c.field-meta.xml
<CustomField><fullName>Due_Date__c</fullName><label>Due Date</label><required>true</required><type>Date</type></CustomField>