force-app/main/default/objects/Contract_Payment__c/fields/Engagement__c.field-meta.xml
<CustomField><fullName>Engagement__c</fullName><deleteConstraint>Restrict</deleteConstraint><label>Project</label><referenceTo>Engagement__c</referenceTo><relationshipLabel>Contract Payments</relationshipLabel><relationshipName>Contract_Payments</relationshipName><required>true</required><type>Lookup</type></CustomField>