force-app/main/default/objects/Contract_Payment__c/fields/Invoice_Number__c.field-meta.xml
<CustomField><fullName>Invoice_Number__c</fullName><label>Invoice Number</label><length>60</length><type>Text</type></CustomField>