force-app/main/default/objects/Contract_Payment__c/fields/Milestone__c.field-meta.xml
<CustomField><fullName>Milestone__c</fullName><label>Payment Milestone</label><length>150</length><required>true</required><type>Text</type></CustomField>