force-app/main/default/objects/Contract_Payment__c/fields/Outstanding_Amount__c.field-meta.xml
<CustomField><fullName>Outstanding_Amount__c</fullName><formula>MAX(0, Planned_Amount__c - Paid_Amount__c)</formula><formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs><label>Outstanding Amount</label><precision>18</precision><scale>2</scale><type>Currency</type></CustomField>