force-app/main/default/objects/Contract_Payment__c/fields/Paid_Amount__c.field-meta.xml
<CustomField><fullName>Paid_Amount__c</fullName><defaultValue>0</defaultValue><label>Paid Amount</label><precision>18</precision><scale>2</scale><type>Currency</type></CustomField>