force-app/main/default/objects/Contract_Payment__c/fields/Paid_Date__c.field-meta.xml
<CustomField><fullName>Paid_Date__c</fullName><label>Paid Date</label><type>Date</type></CustomField>