force-app/main/default/objects/Contract_Payment__c/fields/Payment_ID__c.field-meta.xml
<CustomField><fullName>Payment_ID__c</fullName><caseSensitive>false</caseSensitive><externalId>true</externalId><label>Payment ID</label><length>70</length><required>true</required><type>Text</type><unique>true</unique></CustomField>