force-app/main/default/objects/Contract_Payment__c/fields/Revenue_Recognized_Amount__c.field-meta.xml
<CustomField><fullName>Revenue_Recognized_Amount__c</fullName><description>Revenue recognized against the contract payment or milestone.</description><label>Revenue Recognized Amount</label><precision>18</precision><scale>2</scale><trackHistory>false</trackHistory><type>Currency</type></CustomField>