force-app/main/default/objects/Contract_Payment__c/fields/Status__c.field-meta.xml
<CustomField><fullName>Status__c</fullName><label>Status</label><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Planned</fullName><default>true</default><label>Planned</label></value><value><fullName>Invoiced</fullName><default>false</default><label>Invoiced</label></value><value><fullName>Partially Paid</fullName><default>false</default><label>Partially Paid</label></value><value><fullName>Paid</fullName><default>false</default><label>Paid</label></value><value><fullName>Overdue</fullName><default>false</default><label>Overdue</label></value><value><fullName>Disputed</fullName><default>false</default><label>Disputed</label></value><value><fullName>Waived</fullName><default>false</default><label>Waived</label></value></valueSetDefinition></valueSet></CustomField>