force-app/main/default/objects/Contract_Payment__c/fields/Work_Unit__c.field-meta.xml
<CustomField><fullName>Work_Unit__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Delivery Milestone</label><referenceTo>Work_Unit__c</referenceTo><relationshipLabel>Contract Payments</relationshipLabel><relationshipName>Contract_Payments</relationshipName><type>Lookup</type></CustomField>