force-app/main/default/objects/Contract_Payment__c/fields/Write_Off_Amount__c.field-meta.xml
<CustomField><fullName>Write_Off_Amount__c</fullName><description>Approved non-collectible or waived value.</description><label>Write-Off Amount</label><precision>18</precision><scale>2</scale><trackHistory>false</trackHistory><type>Currency</type></CustomField>