force-app/main/default/objects/Contract_Payment__c/validationRules/Payment_Amounts_Consistent.validationRule-meta.xml
<ValidationRule><fullName>Payment_Amounts_Consistent</fullName><active>true</active><errorConditionFormula>OR(Planned_Amount__c &lt; 0, Invoiced_Amount__c &lt; 0, Paid_Amount__c &lt; 0, Invoiced_Amount__c &gt; Planned_Amount__c, Paid_Amount__c &gt; Invoiced_Amount__c)</errorConditionFormula><errorMessage>Payment amounts must be non-negative and paid cannot exceed invoiced or planned amount.</errorMessage></ValidationRule>