force-app/main/default/objects/Contract_Payment__c/validationRules/Payment_Project_Matches_Contract.validationRule-meta.xml
<ValidationRule><fullName>Payment_Project_Matches_Contract</fullName><active>true</active><errorConditionFormula>Engagement__c &lt;&gt; Commercial_Reference__r.Engagement__c</errorConditionFormula><errorMessage>Payment project must match the contract project.</errorMessage></ValidationRule>